--- a/style.css
+++ b/style.css
@@ -218,10 +218,14 @@ pre {
 .content .row code {
   color: #584773;
 }
-@media (max-width: 330px) {
-  .content .row code {
+@media (max-width: 991px) {
+  .content .row code:not(.barcode) {
     display: block;
     margin-left: -70px !important;
+  }
+  .content .row code.barcode {
+    display: block;
+    margin-left: -84px !important;
   }
 }
 @media (max-width: 991px) {
